#fix: avatar with more than 2 chars, and grids alignment for kendo

--- a/src/css/heartthrob.css
+++ b/src/css/heartthrob.css
@@ -54,10 +54,10 @@ img.rounded { border-radius: 50% }
 .space-low { height: 15px }
 .space-medium { height: 30px }
 .space-long { height: 48px }
-.accent { color: #0078D7 !important}
+.accent { color: #0078D7 !important }
 
 /* Buttons */
-.btn, button { border: 1px solid #ccc; background: #ccc; color: #000; min-height: 40px; min-width: 140px; padding: 8px 15px 0; cursor: pointer; display: inline-block; text-align: center; }
+.btn, button { border: 1px solid #ccc; background: #ccc; color: #000; min-height: 40px; min-width: 140px; padding: 9px 15px 0; cursor: pointer; display: inline-block; text-align: center; }
 .btn:hover, button:hover { border-color: #1d5bbc; background: #1d5bbc; color: #fff; -moz-transition: all .29s; -o-transition: all .29s; -webkit-transition: all .29s; transition: all .29s; }
 .btn:disabled, button:disabled { background: GrayText; border-color: GrayText; -moz-transition: all .3s; -o-transition: all .3s; -webkit-transition: all .3s; transition: all .3s; cursor: not-allowed }
 .btn i { font-size: 16px; margin-right: 3px }
@@ -67,6 +67,7 @@ img.rounded { border-radius: 50% }
 .btn-danger:hover { background: #d22; border-color: #f00 }
 .btn-link { background: transparent; border-color: transparent; color: #0078D7; padding-left: 0; }
 .card .left .btn-link { text-align: left }
+.card .right .btn-link { padding-right: 0 }
 .btn-link i { margin-right: 8px }
 .btn-link:hover { background: transparent; color: #1d5bbc; border-color: transparent; }
 .btn-action { width: intrinsic; width: -moz-max-content; width: -webkit-max-content; }
@@ -99,8 +100,8 @@ input[type="checkbox"]:checked + label::before, input[type="radio"]:checked + la
 input[type="checkbox"] + label::after, input[type=radio] + label::after { -webkit-transform: scale(0); -ms-transform: scale(0); -o-transform: scale(0); transform: scale(0); }
 input[type="checkbox"]:checked + label::after, input[type=radio]:checked + label::after { -webkit-transform: scale(1); -ms-transform: scale(1); -o-transform: scale(1); transform: scale(1); }
 
-.field-validation-error, .validator { border-top: 3px solid #0078D7; padding-top: 3px; display: block; width: 100%; font-size:14px; margin-bottom:8px }
-.field-validation-error{border-color:#cc240e}
+.field-validation-error, .validator { border-top: 3px solid #0078D7; padding-top: 3px; display: block; width: 100%; font-size: 14px; margin-bottom: 8px }
+.field-validation-error { border-color: #cc240e }
 
 .ui-autocomplete-input { position: relative; z-index: 9 }
 .ui-autocomplete { position: absolute; z-index: 8; float: left; min-width: 160px; padding: 0; margin: -40px 0 0; list-style: none; background-color: #fcfcfc; }
